# WAND-practice-and-fatigue-induction

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  Changelog.md  Dummy_Run.py  Dummy_Run_Practice.py  LICENSE.txt  MANIFEST.in  Pre_Processing_Check_List.docx  README.md  README_experiment.md  WAND_Launcher.py  WAND_full_induction.py  WAND_practice_plateau.py  block_builder.py  codex_review.md  post-processing EEG plan.docx  pyproject.toml  requirements.txt  requirements_dev.txt  v1.2.0_fixes_summary.md  wand_analysis.py  wand_common.py  wand_performance_monitor_spec.md
.github/workflows/: ci.yml  compile_paper.yml
Examples/: Sample_Practice_Output.txt  Sample_Save_Output.txt  seq_seq15dummy.csv
Tests/: TEST_DOCUMENTATION.md  conftest.py  demo_performance_alert.py  quicktest_edgecase.py  quicktest_induction.py  quicktest_practice.py  test_block_builder.py  test_block_order.py  test_config.py  test_custom_block_order.py  test_eeg.py  test_imports.py  test_launcher_logic.py  test_level4.py  test_loop_structure.py  test_metrics.py  test_performance_monitor.py  test_quicktest_entrypoint.py  test_response_keys.py  test_results_detailed.txt  test_script.py
config/: params.json  text_en.json
paper/: paper.bib  paper.md
wand_nback/: __init__.py  analysis.py  block_builder.py  block_order.py  common.py  eeg_test.py  full_induction.py  launcher.py  performance_monitor.py  practice_plateau.py
wand_nback/config/: params.json  text_en.json
wand_nback/config/presets/: My_Study11.json  My_Study22.json  My_Study2344.json  My_Study45645.json  My_Study5455.json  Quick_Fail_Demo.json  Standard_WAND_Protocol.json
