[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wand-nback"
version = "1.1.1"
description = "WAND - Working-memory Adaptive-fatigue with N-back Difficulty"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brodie E. Mangan", email = "hello@brodiemangan.com"}
]
keywords = ["psychology", "neuroscience", "n-back", "working-memory", "fatigue", "psychopy", "cognitive-testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
# Note: PsychoPy is typically pre-installed in lab environments.
# We specify a minimum version but recommend using existing PsychoPy installation.
dependencies = [
    "psychopy>=2023.2.0",
    "scipy>=1.9.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/brodie-neuro/WAND-practice-and-fatigue-induction"
Documentation = "https://github.com/brodie-neuro/WAND-practice-and-fatigue-induction#readme"
Repository = "https://github.com/brodie-neuro/WAND-practice-and-fatigue-induction"
Issues = "https://github.com/brodie-neuro/WAND-practice-and-fatigue-induction/issues"

[project.scripts]
wand-launcher = "wand_nback.launcher:main"
wand-practice = "wand_nback.practice_plateau:main"
wand-induction = "wand_nback.full_induction:main_task_flow"

[tool.setuptools]
packages = ["wand_nback"]

[tool.setuptools.package-data]
wand_nback = [
    "config/*.json",
    "config/presets/*.json",
    "stimuli/**/*",
    "logo/*",
]

[tool.black]
exclude = '''
/(
    \.venv
  | \.venv_test
)/
'''

[tool.isort]
profile = "black"
skip = [".venv", ".venv_test"]

[tool.pytest.ini_options]
testpaths = ["Tests"]
python_files = ["test_*.py"]
addopts = "-v"